# unmtx-gpu

./: Cargo.toml  README.md
examples/: mad.rs  mul.rs  mul_bt.rs  simple.rs
src/: cuda.cu  cuda.rs  lib.rs  opencl.cl  opencl.rs  test_helpers.rs  tests.rs
src/cuda/: tests.rs
src/opencl/: tests.rs
