[package]
name = "unmtx-gpu"
version = "0.1.0"
authors = ["Łukasz Szpakowski <luckboy@vp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["opencl", "cuda", "cuda-12060"]

[dependencies]
cl3 = { version = "0.12.0", optional = true }
cudarc = { version = "0.12.1", optional = true }
opencl3 = { version = "0.11.0", optional = true }

[features]
default = ["opencl"]
test_only_backend = []
default_cublas = []
default_mma = []
opencl = ["dep:opencl3", "dep:cl3"]
cuda = ["dep:cudarc"]
cuda-version-from-build-system = ["cuda", "cudarc/cuda-version-from-build-system"]
cuda-12060 = ["cuda", "cudarc/cuda-12060"]
cuda-12050 = ["cuda", "cudarc/cuda-12050"]
cuda-12040 = ["cuda", "cudarc/cuda-12040"]
cuda-12030 = ["cuda", "cudarc/cuda-12030"]
cuda-12020 = ["cuda", "cudarc/cuda-12020"]
cuda-12010 = ["cuda", "cudarc/cuda-12010"]
cuda-12000 = ["cuda", "cudarc/cuda-12000"]
cuda-11080 = ["cuda", "cudarc/cuda-11080"]
cuda-11070 = ["cuda", "cudarc/cuda-11070"]
cuda-11060 = ["cuda", "cudarc/cuda-11060"]
cuda-11050 = ["cuda", "cudarc/cuda-11050"]
cuda-11040 = ["cuda", "cudarc/cuda-11040"]
